CSS media query to ensure paragraph displays nice on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,14 @@ h2.tagline {
   min-width: 200px;
 }
 
+@media only screen and (max-width: 600px) {
+  p  {
+    margin:0 auto;
+    max-width: 280px;
+    min-width: 200px;
+  }
+}
+
 .area{
   width: 100%;
   height:100vh;
